force-app/main/default/objects/News_Article__c/News_Article__c.object-meta.xml
<CustomObject>
    <description>Stores sports news articles with rich text content, images, and metadata</description>
    <label>News Article</label>
    <nameField>
        <displayFormat>NA-{0000}</displayFormat>
        <label>News Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>