force-app/main/default/objects/News_Article__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Rich text article body that can include images, formatting, links, etc.</description>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>