force-app/main/default/objects/News_Article__c/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <description>Article headline/title</description>
    <label>Heading</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>