force-app/main/default/objects/News_Article__c/fields/Related_Fixture__c.field-meta.xml
<CustomField>
    <fullName>Related_Fixture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to related fixture/match (Opportunity)</description>
    <label>Related Fixture</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>News Articles</relationshipLabel>
    <relationshipName>News_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>