force-app/main/default/objects/News_Article__c/fields/Related_Player__c.field-meta.xml
<CustomField>
    <fullName>Related_Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to related player (Contact)</description>
    <label>Related Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>News Articles</relationshipLabel>
    <relationshipName>News_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>