force-app/main/default/objects/News_Article__c/fields/Related_Team__c.field-meta.xml
<CustomField>
    <fullName>Related_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional link to related team (Account)</description>
    <label>Related Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>News Articles</relationshipLabel>
    <relationshipName>News_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>